# alphafold-postprocessing

./: .gitignore  .gitlab-ci.yml  README.md  postprocessing.py  pyproject.toml  setup.cfg  setup.py
alphafold_postprocessing/: cli.py  postprocessing.py  utils.py
