[metadata]
name = alphafold-postprocessing
version = attr: postprocessing.__version__
description = alphafold2 postprocessing
long_description = file: README.md
long_description_content_type = text/markdown
author = Gerhard Bräunlich, Simon Rüdisser
author_email = gerhard.braeunlich@id.ethz.ch, simon.ruedisser@biol.ethz.ch
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
project_urls =
    Source = https://gitlab.ethz.ch/sis/alphafold_on_euler

[options]
install_requires =
    matplotlib
python_requires = >=3.8
zip_safe = False
packages = find:
scripts = postprocessing.py

[options.extras_require]
pymol = pymol

[options.packages.find]
exclude =
    test
    test.*
